<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mood_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView_stress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/stress" />

            <TextView
                android:id="@+id/textView_Activation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/high_arousal" />

            <TextView
                android:id="@+id/textView_excitement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/excitement" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/unpleasant_feelings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <com.cilliandudley.affectgrid.VerticalTextView
                    android:id="@+id/unpleasant_feelings_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/unpleasant_feelings"
                    android:textAlignment="center" />
            </LinearLayout>


            <FrameLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/affect_grid_fl"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                        <View
                            android:id="@+id/y_axis"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_gravity="center_vertical"
                            android:background="@android:color/holo_red_dark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/x_axis"
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:background="@android:color/holo_green_dark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </FrameLayout>


                </android.support.constraint.ConstraintLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical|center_horizontal">

                <com.cilliandudley.affectgrid.VerticalTextView
                    android:id="@+id/pleasant_feelings_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:rotation="180"
                    android:text="@string/unpleasant_feelings" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mood_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView_depression"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/depression" />

            <TextView
                android:id="@+id/textView_deactivation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/sleepiness" />

            <TextView
                android:id="@+id/textView_relaxation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/relaxation" />
        </LinearLayout>
    </LinearLayout>
</merge>